<resources>
    <string name="app_name">DonateApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="network_login_again">Please log in again</string>
    <string name="CLOSE_NAV">Close</string>
    <string name="OPEN_NAV">Open</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="notification">NOTIFICATION</string>
    <string name="Certificate">CERTIFICATE</string>
    <string name="TellFriend">TELL A FRIEND</string>
    <string name="logout">LOGOUT</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>

    <!--photo-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Please try again</string>
    <string name="title_activity_dashboard_navigation">DashboardActivityNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Enable_disable">Enable/disable Profile</string>
    <string name="title_activity_hospital_navigation_home">HospitalNAvigationHomeActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_hospital_dashboard">HospitalDashboardActivity</string>
    <string name="title_activity_hospital_home">HospitalHomeActivity</string>
    <string name="title_activity_mabactivity">MABActivity</string>
</resources>