<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/TellFriend" />
<!--        android:id="@+id/nav_gallery"-->
        <item

            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Certificate" />
<!--        android:id="@+id/nav_slideshow"-->
        <item

            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/notification" />

        <item
            android:id="@+id/showenabledisable"
            android:icon="@drawable/ic_menu_slideshow"
            app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
            android:title="@string/Enable_disable" />

        <item

            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/logout" />
    </group>
</menu>